# cookiecutter-tutor-plugin

./: .gitignore  CHANGELOG.md  Makefile  README.rst  cookiecutter.json
changelog.d/: 20230609_104727_arbrandes.md  scriv.ini
docs/: migrating-from-v0-plugins.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/tutor-sandbox/: .placeholder
{{ cookiecutter.package_name }}/: .bumpversion.cfg  .gitlab-ci.yml  .gitlint  .hatch_build.py  CHANGELOG.md  HACKING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
{{ cookiecutter.package_name }}/.githooks/: post-commit
{{ cookiecutter.package_name }}/.github/workflows/: test.yml  tox.yml
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: __about__.py  plugin.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/templates/{{ cookiecutter.plugin_name }}/jobs/init/: cms.sh  lms.sh  mysql.sh
